--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h2 {
     background-color: black;
     padding: 120px;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .parrafo {
@@ -21,6 +22,7 @@ h2 {
     background-color: aqua;
     padding: 50px;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .usuario {
