--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ h2 {
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
+    margin-bottom: 10px;
 }
 #sig-button {
     padding: 20px;
